minor changes to html code

--- a/index.html
+++ b/index.html
@@ -27,34 +27,34 @@
 <table class="table table-striped">
   <thead class="thead-inverse">
     <tr>
-      <th title="Coin Rank">#Rank</th>
+      <th title="Coin Rank">Marketcap</th>
+	  <th title="Coin Name">Icon</th>
       <th title="Coin Name">Coin</th>
       <th title="Coin Symbol">Symbol</th>
-      <th title="Coin Price in USD">Price/USD</th>
-      <th title="Coin Price in BTC">Price/BTC</th>
+      <th title="Coin Price in USD">Price/R.C.</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
+      <td>93,512,335,623 USD</td>
+	  <td><img src="bitcoin.png"></td>
       <td>Bitcoin</td>
       <td>BTC</td>
-      <td>5500.00</td>
-      <td>1</td>
+      <td>5500.00 USD</td>
     </tr>
     <tr>
-      <th scope="row">2</th>
-      <td>Ethereum</td>
+      <td>32,940,662,747 USD</td>
+	  <td><img src="ethereum.png"></td>
+	  <td>Ethereum</td>
       <td>ETH</td>
-      <td>300.00</td>
-      <td>0.06</td>
+      <td>300.00 USD</td>
     </tr>
     <tr>
-      <th scope="row">3</th>
+      <td>3,422,691,565 USD</td>
+	  <td><img src="litecoin.png"></td>
       <td>Litecoin</td>
       <td>LTC</td>
-      <td>55.00</td>
-      <td>0.011</td>
+      <td>55.00 USD</td>
     </tr>
   </tbody>
 </table>
