--- a/index.html
+++ b/index.html
@@ -4,66 +4,54 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Nr1Coin Teeest</title>
+	<title>Nr1Coin</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<!-- CSS defining icons (required) -->
+   <link rel="stylesheet" href="webfont/cryptocoins.css">
+   <!--link rel="stylesheet" href="webfont/cryptocoins-colors.css"-->
   </head>
   <body>
-	  <div class="container-fluid">
-		  <img src="olivetti.png" style="width: 4%; height: 4%; display: inline-block;">
-		    <h1>Nr1Coin</h1>
-		  <hr/>
-		  <div class="dropdown">
-		    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		      Choose a reference currency
-		    </button>
-		    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-		      <a class="dropdown-item" href="#">BTC</a>
-		      <a class="dropdown-item" href="#">ETH</a>
-		      <a class="dropdown-item" href="#">LTC</a>
-		    </div>
-		  </div>
-		  <hr/>
-<table class="table table-striped">
-  <thead class="thead-inverse">
-    <tr>
-      <th title="Coin Rank">Marketcap</th>
-	  <th title="Coin Name">Icon</th>
-      <th title="Coin Name">Coin</th>
-      <th title="Coin Symbol">Symbol</th>
-      <th title="Coin Price in USD">Price/R.C.</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>93,512,335,623 USD</td>
-	  <td><img src="bitcoin.png"></td>
-      <td>Bitcoin</td>
-      <td>BTC</td>
-      <td>5500.00 USD</td>
-    </tr>
-    <tr>
-      <td>32,940,662,747 USD</td>
-	  <td><img src="ethereum.png"></td>
-	  <td>Ethereum</td>
-      <td>ETH</td>
-      <td>300.00 USD</td>
-    </tr>
-    <tr>
-      <td>3,422,691,565 USD</td>
-	  <td><img src="litecoin.png"></td>
-      <td>Litecoin</td>
-      <td>LTC</td>
-      <td>55.00 USD</td>
-    </tr>
-  </tbody>
-</table>
-	  </div>
+		<div class="container-fluid">
+		
+			<img src="" style="width: 4%; height: 4%; display: inline-block;">
+			<h1>Nr1Coin</h1>
+			<hr/>
+			<div class="form-group">
+				<label for="sel_CUR">Select Reference Currency (R.C.):</label>
+				<select class="form-control" id="sel_CUR">
+					<option value="USD" selected>USD</option>
+					<option value="BTC">BTC</option>
+					<option value="ETH">ETH</option>
+					<option value="LTC">LTC</option>
+				</select>
+			</div>
+			<hr/>
+		
+			<table class="table table-bordered table-striped text-center">
+				<thead class="thead-inverse">
+					<tr>
+					  <th title="Coin Rank" class="text-center">#</th>
+					  <th title="Coin Name" class="text-center">Coin</th>
+					  <th title="Coin Cap" class="text-center">Marketcap</th>
+					  <th title="Coin Price" class="text-center">Price/R.C.</th>
+					  <th title="Percent Change" class="text-center">24h Change</th>
+					</tr>
+				</thead>
+				<tbody id="mainList">
+
+				</tbody>
+			</table>
+		</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  </body>
+	
+	<!-- Then our stuff -->
+	<script src="script-nr1.js"></script>
+	</body>
 </html>
