column Price/R.C. live update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					  <th title="Coin Rank" class="text-center">#</th>
 					  <th title="Coin Name" class="text-center">Coin</th>
 					  <th title="Coin Cap" class="text-center">Marketcap</th>
-					  <th title="Coin Price" class="text-center">Price/R.C.</th>
+					  <th title="Coin Price" class="text-center">Price/<span id="rc_tableh">USD</span></th>
 					  <th title="Percent Change" class="text-center">24h Change</th>
 					</tr>
 				</thead>
